--- a/src/Style/CustomButton.css
+++ b/src/Style/CustomButton.css
@@ -1,9 +1,9 @@
 /* Default button styling */
 .custom-button {
-    border: none;
-    cursor: pointer;
-    padding: 15px;
-    font-size: 16px;
-    text-align: center;
-    transition: all 0.3s ease-in-out;
-  }
+  border: none; /* Removes the default border of the button */
+  cursor: pointer; /* Changes the cursor to a pointer when hovering over the button */
+  padding: 15px; /* Adds 15px of padding inside the button for better click area */
+  font-size: 16px; /* Sets the font size of the button text */
+  text-align: center; /* Aligns the text in the center of the button */
+  transition: all 0.3s ease-in-out; /* Adds a smooth transition effect for all properties over 0.3 seconds */
+}
